[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-voxcpm"
version = "1.0.0"
authors = [{ name = "Guoyang Zeng" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "VoxCPM inference engine based on Nano-vLLM"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
    "torchaudio",
    "tqdm",
    "numpy",
    "pydantic",
]

[project.urls]
Homepage="https://github.com/a710128/nanovllm-voxcpm"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm_voxcpm*"]
